# py-docs-cookiecutter

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.__project_slug }}/.build/: Dockerfile  docker-compose.yml  mkdocs-compose.yml  mkdocs.Dockerfile  slidev-compose.yml  slidev.Dockerfile
{{ cookiecutter.__project_slug }}/.cursor/rules/: autofix-precommit.mdc  md-format-style.mdc  repo-usage.mdc
{{ cookiecutter.__project_slug }}/docs/: SLIDEV.md  USAGE.md  example.ipynb  installation.md
{{ cookiecutter.__project_slug }}/mkdocs/: README.md  mkdocs.yml
{{ cookiecutter.__project_slug }}/mkdocs/docs/: index.md
{{ cookiecutter.__project_slug }}/mkdocs/docs/getting_started/: installation.md  quickstart.md
{{ cookiecutter.__project_slug }}/scripts/: setup_env.sh
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__project_slug }}/: __init__.py  cli.py
